@@ -8,6 +8,7 @@ Unreleased Version 2.3.1-pre
  * Feature: Show rectangle selection extents in the status bar. Thanks Mercia for suggesting.
  * Server Fix: Log streamed resets being blocked properly. Thanks grimsley for reporting.
  * Feature: Allow selecting custom color scheme files dropped into the application data.
+ * Fix: Work around some some Android devices eating three- and four-finger taps unconditionally. Thanks Afiq for reporting.
 
 2025-11-18 Version 2.3.0
  * Fix: Don't show "exit layer view" notice when there's no canvas.
